--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
 
 .navbar {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end ;
     padding: 10px;
     background-color: #333;
     color: white;
